--- a/base/templates/base/borrowings.html
+++ b/base/templates/base/borrowings.html
@@ -1,41 +1,51 @@
 {% extends "main.html" %}
 {% block content %}
-    <div class="borrowings-page-admin">
-        <table>
-            <caption>
-                מידע על ההאשלות של סטודנטים\מרצים
-            </caption>
-            <colgroup>
-                <col span="8">
-            </colgroup>
-            <thead>
-                <tr>
-                    <th>תאריך החזרה</th>
-                    <th>תאריך ההשאלה</th>
-                    <th>תפקיד</th>
-                    <th>מייל</th>
-                    <th>מס' טלפון</th>
-                    <th>שם הפריט</th>
-                    <th>מק''ט הפריט</th>
-                    <th>שם משפחה</th>
-                    <th>שפ פרטי</th>
-                    <th>ת.ז</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Row 1, Column 1</td>
-                    <td>Row 1, Column 2</td>
-                    <td>Row 1, Column 3</td>
-                    <td>Row 1, Column 4</td>
-                    <td>Row 1, Column 5</td>
-                    <td>Row 1, Column 6</td>
-                    <td>Row 1, Column 7</td>
-                    <td>Row 1, Column 7</td>
-                    <td>Row 1, Column 7</td>
-                    <td>336195524</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+
+<div class="borrowings-page-admin">
+    <form method="GET">
+        <label for="identity_num">Search by Identity Number:</label>
+        <input type="text" id="identity_num" name="identity_num">
+        <button type="submit">Search</button>
+    </form>
+    <table>
+        <caption>
+            מידע על ההאשלות של סטודנטים\מרצים
+        </caption>
+        <colgroup>
+            <col span="8">
+        </colgroup>
+        <thead>
+        <tr>
+            <th>תאריך החזרה</th>
+            <th>תאריך ההשאלה</th>
+            <th>תפקיד</th>
+            <th>מייל</th>
+            <th>מס' טלפון</th>
+            <th>שם הפריט</th>
+            <th>מק''ט הפריט</th>
+            <th>שם משפחה</th>
+            <th>שפ פרטי</th>
+            <th>ת.ז</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for el in borrowings %}
+        {% if not request.GET.identity_num or el.user.identity_num == request.GET.identity_num %}
+        <tr>
+            <td>{{el.date_to_return}}</td>
+            <td>{{el.date_borrowed}}</td>
+            <td>{{el.user.role}}</td>
+            <td>{{el.user.email}}</td>
+            <td>{{el.user.mobile_num}}</td>
+            <td>{{el.product.name}}</td>
+            <td>{{el.product.stock_num}}</td>
+            <td>{{el.user.first_name}}</td>
+            <td>{{el.user.last_name}}</td>
+            <td>{{el.user.identity_num}}</td>
+        </tr>
+        {% endif %}
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock content %}
