BSPMC238-15 added option to create single user

--- a/base/templates/base/user_manipulation/show_users.html
+++ b/base/templates/base/user_manipulation/show_users.html
@@ -5,7 +5,7 @@
             <caption>
                 משתמשי האתר
                 <div class="prod-buttons">
-                    <a href="#" class="edit-btn">הוספת משתמש</a>
+                    <a href="{% url 'add_user' %}" class="edit-btn">הוספת משתמש</a>
                 </div>
             </caption>
             <colgroup>
