--- a/base/templates/base/borrowings.html
+++ b/base/templates/base/borrowings.html
@@ -19,8 +19,8 @@
         </colgroup>
         <thead>
         {% if user_type == "admin" %}
-
         <tr>
+            <th>אשר/דחה</th>
             <th>תאריך החזרה</th>
             <th>תאריך ההשאלה</th>
             <th>תפקיד</th>
@@ -49,7 +49,17 @@
         {% if user_type == "admin" %}
         {% for el in borrowings %}
         {% if not request.GET.identity_num or el.user.identity_num == request.GET.identity_num %}
-        <tr class="clickable-row" data-href="?identity_num={{ el.user.identity_num }}">
+        <tr 
+            {% if green is True %}
+                style="background-color: rgb(137, 246, 137);"
+            {% endif %}
+        >
+            <td>
+                <div class="prod-buttons">
+                    <a href="{%url 'borrow_confirm' el.id%}" class="edit-btn">אשר</a>
+                    <a href="" class="edit-btn">דחה</a>
+                </div>
+            </td>
             <td>{{el.date_to_return}}</td>
             <td>{{el.date_borrowed}}</td>
             <td>{{el.user.role}}</td>
@@ -59,7 +69,7 @@
             <td>{{el.product.stock_num}}</td>
             <td>{{el.user.first_name}}</td>
             <td>{{el.user.last_name}}</td>
-            <td>{{el.user.identity_num}}</td>
+            <td class="clickable-row" data-href="?identity_num={{ el.user.identity_num }}">{{el.user.identity_num}}</td>
         </tr>
         {% endif %}
         {% endfor %}
