BSPMC238-148 linkink database with requests

--- a/base/templates/base/special_requests.html
+++ b/base/templates/base/special_requests.html
@@ -1,6 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 <div class="special_requests-page-admin">
+    <a href="{% url 'add_req' %}"><button class="btn btn-info"><i class="fas fa-plus-circle"></i>add</button></a>
     <table>
         <caption>
             מידע על בקשות מיוחדות
