BSPMC238-9 typo pixed

--- a/base/templates/base/borrowings/borrowings_per_category.html
+++ b/base/templates/base/borrowings/borrowings_per_category.html
@@ -3,7 +3,7 @@
     <div class="requests-page-admin">
         <table>
             <caption>
-                {{ category.name }} מידע על ההאשלות של סטודנטים\מרצים לקטגוריה
+                {{ category.name }} מידע על השאלות של קטגורית
             </caption>
             <colgroup>
                 <col span="8">
