--- a/base/templates/base/navbar_buttons/requests_button.html
+++ b/base/templates/base/navbar_buttons/requests_button.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{% url "requests" %}">
+    <a href="{% url 'requests' %}">
         <svg fill="#000000"
              xmlns="http://www.w3.org/2000/svg"
              width="20px"
@@ -17,6 +17,6 @@
             c0-2.2,1.8-4,4-4s4,1.8,4,4C68.8,72.4,67,74.2,64.8,74.2z"/>
             </g>
         </svg>
-        תורים
+        בקשות
     </a>
 </li>
