--- a/base/templates/base/navbar_buttons/special_requests_button.html
+++ b/base/templates/base/navbar_buttons/special_requests_button.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{% url "special_requests" %}">
+    <a href="{% url 'special_requests' %}">
         <svg width="20px"
              height="20px"
              viewBox="0 0 24 24"
