--- a/base/templates/base/navbar_buttons/statistics_button.html
+++ b/base/templates/base/navbar_buttons/statistics_button.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{% url "statistics" %}">
+    <a href="{% url 'statistics' %}">
         <svg width="20px"
              height="20px"
              viewBox="0 0 1024 1024"
