--- a/base/templates/base/panel_buttons/personal_details_button.html
+++ b/base/templates/base/panel_buttons/personal_details_button.html
@@ -1,5 +1,5 @@
 <div class="home-card">
-    <a href="{% url "personal_det" %}">
+    <a href="{% url 'personal_details' %}">
         <svg xmlns="http://www.w3.org/2000/svg"
              data-name="Layer 1"
              viewBox="0 0 29 29"
