--- a/base/templates/base/panel_buttons/special_requests_button.html
+++ b/base/templates/base/panel_buttons/special_requests_button.html
@@ -1,5 +1,5 @@
 <div class="home-card">
-    <a href="{% url "special_requests" %}">
+    <a href="{% url 'special_requests' %}">
         <svg width="50px"
              height="50px"
              viewBox="0 0 24 24"
