--- a/base/templates/base/requests/requests_per_category.html
+++ b/base/templates/base/requests/requests_per_category.html
@@ -3,7 +3,7 @@
     <div class="requests-page-admin">
         <table>
             <caption>
-                {{ category.name }} מידע על התורים להשאלות לקטגוריה
+                {{ category.name }} מידע על בקשת השאלות של קטגורית
             </caption>
             <colgroup>
                 <col span="8">
