--- a/static/css/main.css
+++ b/static/css/main.css
@@ -517,7 +517,7 @@ ADD CATEGORY PAGE
 
 .add_category,
 .add_product,
-.extention_req {
+.borrowing_extention {
     width: 35%;
     height: 35em;
     background-color: #fff;
@@ -526,13 +526,13 @@ ADD CATEGORY PAGE
     box-shadow: 0px 4px 8px rgba(202, 202, 202, 0.25);
 }
 
-.extention_req {
+.borrowing_extention {
     height: 55em;
 }
 
 .add_category form,
 .add_product form,
-.extention_req form {
+.borrowing_extention form {
     margin: 40px;
     direction: rtl;
     font-size: 30px;
@@ -543,17 +543,18 @@ ADD CATEGORY PAGE
 
 .add-category-form label,
 .add-product-form label,
-.extention_req-form label {
+.borrowing_extention-form label {
     display: block;
     margin-bottom: 10px;
     padding-top: 20px;
 }
 
 .add-category-form input[type="text"],
+.add-category-form input[type="date"],
 .add-category-form select,
 .add-product-form input[type="text"],
 .add-product-form select,
-.extention_req-form input[type="text"] {
+.borrowing_extention-form input[type="text"] {
     width: 60%;
     padding: 12px 20px;
     margin: 20px 0;
@@ -566,7 +567,7 @@ ADD CATEGORY PAGE
 
 .add-category-form input[type="submit"],
 .add-product-form input[type="submit"],
-.extention_req-form input[type="submit"] {
+.borrowing_extention-form input[type="submit"] {
     background-color: #4CAF50;
     color: white;
     padding: 10px 20px;
@@ -687,4 +688,3 @@ PRODUCTS PAGE
 #delete-inp {
     background: red;
 }
-
