--- a/base/templates/base/navbar_buttons/borrowings_button.html
+++ b/base/templates/base/navbar_buttons/borrowings_button.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{% url "borrowings" %}">
+    <a href="{% url 'borrowings' %}">
         <svg width="20px"
              height="20px"
              viewBox="0 0 24 24"
