--- a/base/templates/base/navbar_buttons/catalog_button.html
+++ b/base/templates/base/navbar_buttons/catalog_button.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{% url "catalog" %}">
+    <a href="{% url 'catalog' %}">
         <svg fill="#000000"
              version="1.1"
              id="Capa_1"
