--- a/base/templates/base/navbar_buttons/users_button.html
+++ b/base/templates/base/navbar_buttons/users_button.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{% url 'show_users' %}">
+    <a href="{% url 'users' %}">
         <svg xmlns="http://www.w3.org/2000/svg"
              data-name="Layer 1"
              viewBox="0 0 29 29"
