--- a/base/templates/base/panel_buttons/contact_us_button.html
+++ b/base/templates/base/panel_buttons/contact_us_button.html
@@ -1,5 +1,5 @@
 <div class="home-card">
-    <a href=" {% url "contact_us" %}">
+    <a href=" {% url 'contact_us' %}">
         <svg width="50px"
              height="50px"
              viewBox="0 0 20 20"
