--- a/base/templates/base/panel_buttons/statistics_button.html
+++ b/base/templates/base/panel_buttons/statistics_button.html
@@ -1,5 +1,5 @@
 <div class="home-card">
-    <a href="{% url "statistics" %}">
+    <a href="{% url 'statistics' %}">
         <svg width="50px"
              height="50px"
              viewBox="0 0 1024 1024"
