--- a/base/templates/base/reset_password/main.html
+++ b/base/templates/base/reset_password/main.html
@@ -13,10 +13,17 @@
     <body onload="toggleZoomScreen()" onresize="toggleZoomScreen()">
         <div class="login">
             <div class="login-title">{{ PROJECT_NAME }}</div>
-            {% include "base/messages.html" %}
+                {% if messages %}
+                    <div>
+                        <ul class="messages">
+                            {% for message in messages %}
+                                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
             {% block content %}
             {% endblock content %}
-            {% include "base/messages.html" %}
         </div>
     </body>
     <footer>
