--- a/static/css/main.css
+++ b/static/css/main.css
@@ -554,7 +554,8 @@ ADD CATEGORY PAGE
 .add-category-form select,
 .add-product-form input[type="text"],
 .add-product-form select,
-.borrowing_extention-form input[type="text"] {
+.borrowing_extention-form input[type="text"],
+.borrowing_extention-form input[type="number"] {
     width: 60%;
     padding: 12px 20px;
     margin: 20px 0;
